Arrumando o cabeçalho de sobre nós

--- a/style.css
+++ b/style.css
@@ -269,7 +269,9 @@ main {
     flex-direction: column;
   }
 }
-
+.sobrenos-cabecalho {
+  text-align: center;
+}
 
 #secao-sobre-nos,
 #secao-porque-escolher {
