(feat)-arrumando as imagens do asseds

--- a/src/main/webapp/crud.css
+++ b/src/main/webapp/crud.css
@@ -79,7 +79,7 @@ body{
 .logout img{
     width: 20px;
 }
-/* corpo da pág empresas*/
+/* corpo de páginas*/
 .content {
     flex-grow: 1;
     height: 100vh; 
