--- a/src/main/webapp/CRUD/crud.css
+++ b/src/main/webapp/CRUD/crud.css
@@ -247,3 +247,14 @@ tbody td.actions img:hover {
         font-size: 12px;
     }
 }
+
+.btn-pequeno {
+    padding: 4px 10px;
+    font-size: 12px;
+    border-radius: 6px;
+    background-color: #9c27b0;
+    color: white;
+    border: none;
+    cursor: pointer;
+    margin: 2px;
+}
