--- a/src/main/webapp/CRUD/popUp.css
+++ b/src/main/webapp/CRUD/popUp.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #6c3483;
+    background-color: #F6E9FA;
 }
 
 .popup-overlay {
