(feat) Padroniza paleta de cores do site e deleta linhas duplicadas.

--- a/src/main/webapp/styles/content.css
+++ b/src/main/webapp/styles/content.css
@@ -1,3 +1,8 @@
+/* .sobre-nos-cabecalho{
+  color: var(--cinza);
+}
+
+
 .ler-mais-toggle {
   display: none;
 }
@@ -69,4 +74,4 @@
 
 #secao-porque-escolher .botao-ler-mais {
   margin-top: 20px;
-}
+} */
