--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -1,10 +1,3 @@
-/* Paleta de cores */
-:root {
-  --roxoescuro: #6a0dad; /* 700 */
-  --roxoclaro: #b025f3; /* 500 */
-  --cinza: #6b6b6b; /* muted */
-}
-
 html {
   scroll-behavior: smooth;
 }
@@ -186,78 +179,7 @@ main {
 
 /* --- seções de conteúdo --- */
 
-.ler-mais-toggle {
-  display: none;
-}
 
-.texto-oculto {
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 0.4s ease;
-}
-
-.ler-mais-toggle:checked ~ .texto-oculto {
-  max-height: 500px; 
-}
-
-.botao-ler-mais {
-  display: inline-block;
-  margin-top: 20px;
-  padding: 10px 20px;
-  border: 1px solid #9370db;
-  background-color: transparent;
-  color: #9370db;
-  border-radius: 20px;
-  cursor: pointer;
-  font-weight: bold;
-}
-
-.botao-ler-mais:hover {
-  background-color: #f0e6fa;
-}
-#secao-porque-escolher {
-  padding: 60px 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-#secao-porque-escolher .conteudo-secao {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  gap: 40px;
-  width: 100%;
-  max-width: 1200px;
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-  flex-direction: row-reverse; 
-}
-
-#secao-porque-escolher .texto-secao {
-  flex: 1;
-  min-width: 300px;
-  max-width: 500px;
-  text-align: left;
-}
-
-#secao-porque-escolher .texto-secao h2 {
-  font-size: 2rem;
-  margin-top: 0;
-  color: #333;
-}
-
-#secao-porque-escolher .texto-secao p {
-  line-height: 1.6;
-  color: #555;
-}
-
-#secao-porque-escolher .botao-ler-mais {
-  margin-top: 20px;
-}
 
 /* --- seção de serviços --- */
 .servico-card  {
@@ -295,18 +217,9 @@ main {
   background-color: #f8f8f8;
 }
 
-.servicos-cabecalho p {
-  color: #9370db;
-  font-weight: 600;
-  font-size: 1rem;
-  margin-bottom: 5px;
-}
 
-.servicos-cabecalho h2 {
-  font-size: 2.5rem;
-  font-weight: 700;
-  margin-top: 0;
-  margin-bottom: 50px;
+.servicos-cabecalho span{
+  color:var(--roxoclaro)
 }
 
 .servicos-grid {
@@ -400,12 +313,6 @@ main {
   text-align: center;
 }
 
-.faq-cabecalho p {
-  color: #9370db;
-  font-weight: 600;
-  font-size: 1rem;
-  margin-bottom: 5px;
-}
 
 .faq-cabecalho h2 {
   font-size: 2.5rem;
@@ -602,11 +509,6 @@ main {
   cursor: pointer;
   font-weight: 600;
   transition: background-color 0.3s ease, color 0.3s ease;
-}
-
-.plano-botao.active {
-  background-color: #9370db;
-  color: #fff;
 }
 
 .planos-container {
