--- a/src/main/webapp/styles/benefits.css
+++ b/src/main/webapp/styles/benefits.css
@@ -18,6 +18,11 @@
   line-height: 1.1;
   font-weight: 700;
   margin-bottom: 40px;
+  color: var(--pretoText);
+}
+
+.beneficios-left li{
+  color: var(--pretoText);
 }
 
 .lista-beneficios {
