--- a/src/main/webapp/styles/services.css
+++ b/src/main/webapp/styles/services.css
@@ -74,7 +74,7 @@
 .icone-circulo {
   width: 60px;
   height: 60px;
-  background-color: #f0e6fa;
+  background-color: #ffffff;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -82,7 +82,13 @@
   margin-bottom: 20px;
 }
 
-
+.plano-destaque {
+  background-color: #231d4f;
+  color: #fff;
+  transform: scale(1.05);
+  position: relative;
+  box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
+}
 
 .icone-placeholder {
   font-size: 2rem;
@@ -110,7 +116,7 @@
 }
 
 .botao-cta-roxo:hover {
-  background-color: #7d52cc;
+  background-color: #5900ff;
 }
 
 .servicos-cta {
