--- a/src/main/webapp/styles/benefits.css
+++ b/src/main/webapp/styles/benefits.css
@@ -10,7 +10,8 @@
 
 .beneficios-left {
   flex: 1;
-  min-width: 300px;
+  min-width: 300px; 
+  margin-left: 15px;
 }
 
 .beneficios-left h2 {
@@ -40,11 +41,9 @@
 
 .check-icon {
   font-size: 1.2rem;
-  color: #9370db;
-  background-color: #f0e6fa;
+  color: var(--roxoclaro);
   width: 30px;
   height: 30px;
-  border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -68,6 +67,4 @@
   width: 100%;
   max-width: 600px;
   height: auto;
-  border-radius: 20px;
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
 }
