--- a/src/main/webapp/styles/content.css
+++ b/src/main/webapp/styles/content.css
@@ -120,7 +120,8 @@
 
 #secao-sobre-nos .conteudo-secao {
   background-color: #fff;
-  padding: 20px;
+  padding: 30px;
+  margin: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -134,6 +135,7 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border: 1px solid #ddd;
 }
+
 .imagem {
   width: 100%;
   height: auto;
