--- a/src/main/webapp/styles/hero.css
+++ b/src/main/webapp/styles/hero.css
@@ -1,5 +1,5 @@
 main {
-  padding-top: 100px;
+  padding-top: 200px;
 }
 
 .hero {
@@ -7,6 +7,7 @@ main {
   align-items: center;
   gap: 40px;
   padding: 40px 0;
+  margin-top: 50px;
 }
 
 .hero-left, .hero-right {
@@ -20,6 +21,7 @@ main {
   margin-left: 60px;
   margin-bottom: 60px;
 }
+
 
 .hero-left h1 {
   font-size: 3.2rem;
@@ -55,7 +57,7 @@ main {
 }
 
 .hero-right .decor {
-  width: 420px;
+  width: 600px;
   border-radius: 14px;
   object-fit: cover;
 }
