--- a/src/main/webapp/CRUD/popUp.css
+++ b/src/main/webapp/CRUD/popUp.css
@@ -109,3 +109,27 @@ body {
 .close-btn:hover {
     color: #333;
 }
+
+#filtroPopup {
+    position: absolute;
+    top: 60px;      /* abaixo do botão */
+    left: 50%;
+    width: 500px; /* tamanho menor */
+    height: 300px;
+    padding: 15px;
+    border-radius: 10px;
+    max-height: none;
+}
+.filtroPopup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    display: none;
+    justify-content: center; 
+    align-items: flex-start;
+    z-index: 999;
+    pointer-events: auto;
+}
