--- a/src/main/webapp/styles/header.css
+++ b/src/main/webapp/styles/header.css
@@ -33,9 +33,7 @@
   transition: color 0.3s ease;
 }
 
-.main-nav {
-  color: #222;
-}
+
 
 .menu-line {
   position: absolute;
@@ -59,7 +57,7 @@
   align-items: center;
 }
 .auth .login {
-  color: #000000;
+  color: var(--pretoText);
   text-decoration: none;
 }
 
