--- a/src/main/webapp/CRUD/popUp.css
+++ b/src/main/webapp/CRUD/popUp.css
@@ -112,9 +112,9 @@ body {
 
 #filtroPopup {
     position: absolute;
-    top: 60px;      /* abaixo do botão */
+    top: 60px;
     left: 50%;
-    width: 500px; /* tamanho menor */
+    width: 500px;
     height: 300px;
     padding: 15px;
     border-radius: 10px;
