(feat) Adiciona menu hambúrger e arruma responsividade

--- a/src/main/webapp/styles/header.css
+++ b/src/main/webapp/styles/header.css
@@ -133,10 +133,14 @@
 
 .hamb-links .hamb-auth {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: 8px;
   padding-top: 6px;
   width: 100%;
+}
+
+.hamb-auth .cadastro {
+  color: var(--roxoclaro);
 }
 
 #hamb-toggle:checked~.hamb-links {
