--- a/src/main/webapp/CRUD/crud.css
+++ b/src/main/webapp/CRUD/crud.css
@@ -328,6 +328,10 @@ tbody td.actions img:hover {
 
 
 @media (max-width: 480px) {
+    .sidebar {
+        height: 100%;
+    }
+
     .header h1 {
         font-size: 18px;
     }
