--- a/src/main/webapp/styles/responsivity.css
+++ b/src/main/webapp/styles/responsivity.css
@@ -80,7 +80,13 @@
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 768) {
+  .menu-hamb {
+    display: none !important;
+  }
+}
+
+@media (max-width: 680px) {
   .container {
     width: 95%;
   }
@@ -135,8 +141,7 @@
     justify-content: center;
   }
 
-  img,
-  video {
+  img {
     max-width: 100%;
     height: auto;
   }
@@ -150,12 +155,6 @@
     box-shadow: none;
     width: auto;
     padding: 0;
-  }
-}
-
-@media (min-width: 481px) {
-  .menu-hamb {
-    display: none;
   }
 }
 
