--- a/src/main/webapp/styles/header.css
+++ b/src/main/webapp/styles/header.css
@@ -1,3 +1,6 @@
+html{
+  scroll-behavior: smooth;
+}
 .site-header {
   position: fixed;
   top: 0;
@@ -148,7 +151,10 @@
 }
 
 .hamb-auth .cadastro {
-  color: var(--roxoclaro);
+  width: 120px;
+  border-radius: 15px;
+  color: #fff;
+  background-color: var(--roxoclaro);
 }
 
 #hamb-toggle:checked~.hamb-links {
