--- a/src/main/webapp/styles/login.css
+++ b/src/main/webapp/styles/login.css
@@ -22,13 +22,13 @@ body {
 .logo {
     font-size: 2.5rem;
     font-weight: 700;
-    color: #6a0dad;
+    color: #9c27b0;
     margin-bottom: 10px;
 }
 
 .subtitulo {
     font-size: 1.2rem;
-    color: #9370db;
+    color: #9c27b0;
     margin-bottom: 30px;
     font-weight: 500;
 }
@@ -57,7 +57,7 @@ body {
 
 .form-group input:focus {
     outline: none;
-    border-color: #9370db;
+    border-color: #9c27b0;
 }
 
 .input-group {
@@ -86,7 +86,7 @@ body {
 .btn-cadastro {
     width: 100%;
     padding: 15px;
-    background-color: #9370db;
+    background-color: #9c27b0;
     color: #fff;
     border: none;
     border-radius: 10px;
@@ -97,13 +97,13 @@ body {
 }
 
 .btn-cadastro:hover {
-    background-color: #7d52cc;
+    background-color: #9c27b0;
 }
 
 .link-login {
     display: block;
     margin-top: 20px;
-    color: #6a0dad;
+    color: #9c27b0;
     font-weight: 500;
     text-decoration: none;
 }
